# Embedded-Multimedia

./: .gitignore  CMakeLists.txt  Jenkinsfile  README.md  home-alarm-core  install_requirements.sh  sonar-project.properties
build-qt_pin_check_project-Desktop-Release/: moc_pin_checker.cpp  qt_pin_check_project
build-qt_sensor_project-Desktop-Debug/: moc_mainwindow.cpp  qt_sensor_project
build-qt_sensor_project-Desktop-Release/: qt_sensor_project
database/: README.md  docker-compose.grafana.yml  docker-compose.yml  init copy.sql  init.sql
database/grafana-provisioning/datasource/: datasource.yml
qt_pin_check_project/: main.cpp  pin_checker.cpp  pin_checker.h  qt_pin_check_project.pro  show_on_display.py  tm1637.py
qt_sensor_project/: database.cpp  database.h  gpiosensor.cpp  gpiosensor.h  isensor.h  main.cpp  qt_sensor_project.pro
rules/: rules.schema.json  rules.yaml
src/: alarm_system.cpp  alarm_system.h  core.cpp  db_access.cpp  db_access.h  db_access_test.cpp  main.cpp  ruleengine.h  sensor_data.h  statemachine.cpp
src_old/: core.cpp  core.h  db_access.cpp  ruleengine.cpp  sensor_data.h  statemachine.h
test/: db_access_test.cpp
web/: Status der Sensoren-1752438876624.json  docker-compose.yml
web/dashboards/: statusdersensoren.json
